--- a/elitetracker-front/src/components/sidebar/styles.module.css
+++ b/elitetracker-front/src/components/sidebar/styles.module.css
@@ -4,6 +4,7 @@
 	align-items: center;
 	width: 80px;
 	padding: 15px 0;
+	height: 100vh;
 	background-color: var(--black-blue);
 }
 
@@ -14,6 +15,10 @@
 }
 
 .links {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 40px;
 	margin-top: 46px;
 }
 
@@ -24,7 +29,7 @@
 .links a svg {
 	width: 32px;
 	height: 32px;
-	fill: var(--white);
+	fill: var(--light);
 	transition: fill 100ms;
 }
 
@@ -43,4 +48,8 @@
 
 .signout a:hover svg {
 	fill: var(--error-hover);
+}
+
+.active {
+	fill: var(--white) !important;
 }
